css changes to fix button "stick" on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 font-family: 'Bebas Neue', cursive;
 
-.btn:hover {
+.btn-lg:hover {
     background-color: inherit;
 }
